--- a/src/Modules/Header.module.css
+++ b/src/Modules/Header.module.css
@@ -126,8 +126,7 @@
     justify-content: center;
     align-items: center;
     background: #fff;
-    border: 1px solid #589667;
-    border-style: dashed;
+    border-style: none;
    }
 
    .menu_res{
@@ -136,6 +135,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-style: none;
    }
 
    .menu_res button{
@@ -147,7 +147,7 @@
     .menu_res img{
         width:100%;
         height: 100%;
-        border-radius: 100%;
+        border-style: none;
     }
 
   .listas{
