--- a/src/Modules/Footer.module.css
+++ b/src/Modules/Footer.module.css
@@ -2,7 +2,7 @@
 *{
     margin:0px;
     padding:0px;
-    box-sizing:border-box; /* Corregido: cambiar '0px' a 'border-box' */
+    box-sizing:border-box;
     font-family: 'Anton', sans-serif;
     font-family: 'Comfortaa', cursive;
     scroll-behavior: smooth;
@@ -10,6 +10,7 @@
 }
 
 /*Footer*/
+
 .footer{ 
     width:100%;
     height:50vh;    
@@ -26,7 +27,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap; /* Agregado: envolver elementos cuando el espacio sea insuficiente */
+    flex-wrap: wrap; 
 }
  
 .logo{
