--- a/src/Modules/Nuestra.module.css
+++ b/src/Modules/Nuestra.module.css
@@ -1,7 +1,8 @@
-/*Estilos por defecto*/
+/*Estilos por defecto*/ 
+ 
 *{
     margin:0px; 
-    padding:0px;
+    padding:0px; 
     box-sizing:border-box;
     font-family: 'Anton', sans-serif;
     font-family: 'Comfortaa', cursive;
@@ -9,14 +10,6 @@
 }
 
 /*Nuestra*/
-
-.contenedor {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .sobre{
     width:100%;
@@ -27,61 +20,75 @@
     border:1px solid #ccc;
 }
 
-.foto {
-    width: 40%;
-    height: 100%;
+.contenedor {
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top-right-radius: 100%;
-    background-color: #589667;
 }
 
-.Informacion {
+.caracteristicas{
     width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
-}
-
-.Informacion h2 {
-    width: 90%;
     position: relative; 
     z-index: 1;
-    color:#fff;
-    font-size: 17px;
+    gap:1rem;
 }
 
-.fondo { 
+.lista{
+   width: 90%;
+   height: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   list-style: none;
+   gap:2rem;
+}
+
+.imagen{
     width: 40%;
-    height: 35%;
-    border-bottom-left-radius: 100%;
-    background-color: #589667;
-    position: absolute; 
-    top: 0;
-    right:0;
-    z-index: 0;  
-}
-
-.tarjeta{
-    width: 50%;
-    height: 90%;
-    background: #000000a4;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10;  
-    border-radius: 5%;
 }
 
-.tarjeta img{
+.imagen img{
+    image-rendering: auto;
+}
+
+.unirse{
+    width:90%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:2rem;
+}
+
+.unirse p{
+    text-align: center;
+}
+
+.unirse button{
+    width:20%;
+    height: 4rem;
+    border-radius: 10%;
+    border-style: none;
+    background:  #589667;
+    color:white;
+}
+
+.titulo{
     width: 90%;
-    height: 90%;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5%;
 }
