--- a/src/Modules/Header.module.css
+++ b/src/Modules/Header.module.css
@@ -21,6 +21,32 @@
     border-bottom: 1px solid #ccc;
 }
 
+/*listas*/
+
+.listas{
+    width:70%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.listas a{
+    color:black;
+    text-decoration: none;
+}
+
+.listas button{ 
+    width:10rem;
+    height:2rem;
+    border:none;
+    background: none;
+}
+
+.listas a:hover{    
+   border-bottom: 1px solid #589667;
+}
+
 /*Menu_Responsive*/
 
 .menu_res{
@@ -50,83 +76,19 @@
     background: none;
 }
 
-.listas{
-    width:50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.listas a{
-    color:black;
-    text-decoration: none;
-}
-
-.listas button{ 
-    width:10rem;
-    height:2rem;
-    border:none;
-    background: none;
-}
-
-.listas a:hover{    
-   border-bottom: 1px solid #589667;
-}
-
-/*Perfil*/
-
-.perfil{
-    width:30%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:1rem;
-}
-
-.perfil input{
-    width: 150px;
-    height: 1.5rem;
-}
-
-.perfil button{
-    height: 100%;
-    border-style: none;
-    background: none;
-}
-
-.perfil img{
-    width:70%;
-    height: 70%;
-    border-radius: 100%;
-    border:1px solid #ccc;
-    border-style: dashed;
-}
-
 
 /*Responcive desing*/
 
-@media (max-width: 930px) {
+@media (max-width: 815px) {
 
    .header{
     display: flex;
     justify-content:space-around;
     align-items: center;
-   }
+   } 
 
    .logo{
     width: 55%;
-   }
-
-   .buscador{
-    width: 10%;    
-    height: 70%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-    border-style: none;
    }
 
    .menu_res{
