--- a/src/Modules/Home.module.css
+++ b/src/Modules/Home.module.css
@@ -49,4 +49,10 @@
     background-color: #589667;
     margin-bottom: 1rem;
 }
-    
+
+ 
+@media (max-width: 970px) {
+    .slogan{
+        display: none;
+    }
+}
