--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -16,98 +16,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #73A073;
 }
 
 .sobre{
     width:100%;
     height:10vh;
-    display: flex;
+    display: flex; 
     justify-content: center;
     align-items: center;
     border:1px solid #ccc;
 }
 
-.foto {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 100%;
-    background-color: #589667;
-}
-
-.Informacion {
-    width: 60%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-}
-
-.Informacion h2 {
-    width: 90%;
-    position: relative; 
-    z-index: 1;
-    color:#fff;
-    font-size: 17px;
-}
-
-.fondo { 
-    width: 40%;
-    height: 35%;
-    border-top-right-radius: 100%;
-    background-color: #589667;
-    position: absolute; 
-    bottom: 0;
-    left: 0;
-    z-index: 0;  
-}
-
-.tarjeta{
-    width: 80%;
+.video{
+    width: 70%;
     height: 80%;
-    background: #5F4F4A;
+    background: #fff;
+    border:1px solid #ccc;
+    box-shadow: 1px 1px 7px 1px #000;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    z-index: 10;  
-    border-radius: 5%;
-    text-align: center;
-
+    gap:2rem;
 }
 
-.tarjeta p {
-    width: 30px;
-    height: 30px;
-    background:#fff;
-    border-radius: 100%;
-    position: relative;
-    left: 200px;
-    top: -35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+/*Responcive desing*/
 
-.tarjeta p::before,
-.tarjeta p::after {
-    content: '';
-    width: 30px;
-    height: 30px;
-    background:cornflowerblue;
-    border-radius: 100%;
-    position: absolute;
-}
-
-.tarjeta p::before {
-    left: -35px;
-}
-
-.tarjeta p::after {
-    right: -35px;
+@media (max-width: 930px) {
+   .video{
+        width: 90%;
+        height: 90%;
+   }
 }
