--- a/src/Modules/Footer.module.css
+++ b/src/Modules/Footer.module.css
@@ -95,7 +95,7 @@
     width:30%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     flex-direction: column;
     gap:1rem;
@@ -114,6 +114,53 @@
 
 @media (max-width:950px) {
   
+     .footer{
+        height: 60vh;
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        flex-direction: column;
+        gap:2rem;
+     }
+
+     .logo{
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+     }
+
+     .logo img{
+        width: 10%;
+     }
+
+     .unirse{
+        width: 100%;
+        height: 60%;
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+     
+     }
+
+    .seguir h2{
+        display: none;
+    }
+
+    .informacion{
+        display: none;
+    }
+
+    .titulo{
+        display: none;
+    }
 
 }
 
+
+@media (max-width:630px) {
+    .logo img{
+        width:20%;
+     }
+}
