--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -17,6 +17,7 @@
     justify-content: center;
     align-items: center;
     background: #73A073;
+    gap:2rem;
 }
 
 .sobre{
@@ -28,20 +29,60 @@
     border:1px solid #ccc;
 }
 
+.video_presentacion{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .video{
-    width: 70%;
-    height: 80%;
-    background: #fff;
-    border:1px solid #ccc;
-    box-shadow: 1px 1px 7px 1px #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video2{
+    display: none;
+}
+
+.videos{
+    width: 30%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:2rem;
+    gap:1rem;
 }
 
-.video img{
+.reels{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: red;
+    box-shadow: 1px 1px 7px 1px #000;
+}
+
+.reels p{
+    width: 100%;
+    height: 20%;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reels img{
+    width: 100%;
+    height: 80%;
+}
+
+.reels_video{
     width: 100%;
     height: 100%;
 }
@@ -49,8 +90,53 @@
 /*Responcive desing*/
 
 @media (max-width: 930px) {
-   .video{
-        width: 90%;
-        height: 90%;
-   }
+ 
+    .contenedor {
+        width: 100%;
+        height: 150vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: #73A073;
+    }
+
+     .video_presentacion{
+        width: 100%;
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+     }
+
+     .videos{
+        width: 100%;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+     }
+
+        .reels{
+            width: 60%;
+            height: 45%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            box-shadow: 1px 1px 7px 1px #000;
+        }
+
+    .video{
+        display: none;
+    }
+     
+    .video2{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
