--- a/src/Modules/Eventos.module.css
+++ b/src/Modules/Eventos.module.css
@@ -8,17 +8,25 @@
     font-family: 'Anton', sans-serif;
     font-family: 'Comfortaa', cursive;
 } 
-
+ 
 /*Eventos*/ 
 
 .contenedor{
     width:100%;
     height: 100vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    background: #73A073;
+}
+
+.evetos{
+    width:100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #73A073;
 }
 
 .sobre{
@@ -28,4 +36,104 @@
     justify-content: center;
     align-items: center; 
     border:1px solid #ccc;
+}
+
+.informacion{
+    width: 50%;
+    height: 100%;
+    text-align: justify;    
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;
+    gap:1rem;
+}
+
+.informacion button{
+    width: 30%;
+    height: 3rem;
+}
+
+.informacion p{
+    width: 80%;
+    color:white;
+}
+
+.informacion img{
+    width: 30%;
+    height: 30%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.foto{
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.foto img{
+    width: 80%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 3px white;
+    border-bottom: solid 50px white;
+}
+
+.foto_evento{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.foto_evento img{
+    width: 70%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    border: solid 3px white;
+    border-bottom: solid 50px white;
+}
+
+.texto_evento{
+    width: 50%;
+    height: 100%;
+    text-align: justify;
+    display: flex;
+    justify-content: center;    
+    align-items: center; 
+    flex-direction: column;
+    gap:1rem;
+}
+
+.texto_evento p{
+    width: 80%;
+    color:white;
+}
+
+ /*Responcive desing*/
+
+@media (max-width: 900px) {
+    .contenedor{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .evetos{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
