--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -37,10 +37,28 @@
     align-items: center;
 }
 
+.compu{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.compu img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .video{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
 }
 
 .video2{
