--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -16,8 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #73A073;
-    gap:2rem;
+    background: linear-gradient(to right, #589667, #7ED957);
 }
 
 .sobre{
@@ -29,133 +28,39 @@
     border:1px solid #ccc;
 }
 
-.video_presentacion{
-    width: 60%;
+.presentacion{
+    width: 70%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.compu{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-.compu img{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.video{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-}
-
-.video2{
-    display: none;
-}
-
-.videos{
-    width: 30%;
-    height: 100%;
-    display: flex;
+    display: flex; 
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap:1rem;
 }
 
-.reels{
-    width: 90%;
-    height: 40%;
-    display: flex;
+.presentacion p{
+    font-size:25px;
+    color:#000;
+}
+
+.tarjetas{
+    width: 30%;
+    height: 100%;
+    display: flex; 
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: red;
-    box-shadow: 1px 1px 7px 1px #000;
+    gap:1rem;
 }
 
-.reels a{
-    width: 100%;
-    height: 20%; 
-    background: #fff;
-    display: flex;
+.red{
+    width: 40%;
+    height: 25%;
+    display: flex; 
     justify-content: center;
     align-items: center;
-    text-decoration: none;
+    flex-direction: column;
+    gap:1rem;
+    background: white;
 }
 
-.reels img{
-    width: 100%;
-    height: 80%;
-}
-
-.reels_video{
-    width: 100%;
-    height: 100%;
-}
-
-/*Responcive desing*/
-
-@media (max-width: 1000px) {
- 
-    .contenedor {
-        width: 100%;
-        height: 150vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background: #73A073;
-    }
-
-     .video_presentacion{
-        width: 100%;
-        height: 80vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-     }
-
-     .videos{
-        width: 100%;
-        height: 70vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-     }
-
-        .reels{
-            width: 60%;
-            height: 45%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            box-shadow: 1px 1px 7px 1px #000;
-        }
-
-    .video{
-        display: none;
-    }
-     
-    .video2{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-}
