--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -52,15 +52,40 @@
     flex-direction: column;
     gap:1rem;
 }
-
-.red{
+.red {
     width: 40%;
     height: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    position: relative;
+    z-index: 1; 
+  }
+  
+  .red img{
+    width: 100%;
+    height: 100%;
     display: flex; 
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap:1rem;
-    background: white;
-}
+    border:solid 1px black;
+  }
 
+  .info_red {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    transition: transform 0.3s ease; 
+  }
+  
+  .red:hover .info_red {
+    transform: translateX(-100%); 
+  }
+  
