--- a/src/Modules/SobreNosotros.module.css
+++ b/src/Modules/SobreNosotros.module.css
@@ -38,6 +38,15 @@
     gap:1rem;
 }
 
+.video{
+  width: 100%;
+  height: 100%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  background: red;
+}
+
 .tarjetas{
     width: 30%;
     height: 100%;
@@ -99,6 +108,18 @@
 
 @media (max-width:1440px){
 
+  .videodos{
+    display: flex;
+  }
+
+  .presentacion{
+    display: none;
+  }
+
+  .tarjetas{
+    display: none;
+  }
+
   .contenedor{
    flex-direction: column;
   }
@@ -111,18 +132,6 @@
     align-items: center;
   }
   
-  .videodos{
-    display: flex;
-  }
-
-  .presentacion{
-    display: none;
-  }
-
-  .tarjetas{
-    display: none;
-  }
-  
   .tarjetasdos{
     width:100%;
     height:100%;
@@ -132,7 +141,27 @@
     flex-direction: column;
     gap: 3rem;
   }
-
+  
+  .reddos{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+ } 
+    
+  .info_red_dos{
+    width: 20%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10%;
+    background: white;
+    gap:1rem;
+  }
 
 }
 
