--- a/src/Modules/Header.module.css
+++ b/src/Modules/Header.module.css
@@ -83,7 +83,7 @@
 
    .header{
     display: flex;
-    justify-content:space-between;
+    justify-content:center;
     align-items: center;
    } 
 
